--- a/P0_Panoramic_and_Fullpage/selfdefine.css
+++ b/P0_Panoramic_and_Fullpage/selfdefine.css
@@ -114,12 +114,7 @@ p{
 	padding: 0;
 	margin:0;
 }
-.twitter-share-button{
-	position: fixed !important;
-	z-index: 99;
-	right: 149px;
-	top: 9px;
-}
+
 #infoMenu{
 	height: 20px;
 	color: #f2f2f2;
@@ -146,49 +141,6 @@ p{
 	display:inline-block;
 	position:relative;
 }
-#examplesList{
-	display:none;
-	background: #282828;
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	padding: 20px;
-	float: left;
-	position: absolute;
-	bottom: 29px;
-	right: 0;
-	width:822px;
-	text-align:left;
-}
-#examplesList ul{
-	padding:0;
-}
-#examplesList ul li{
-	display:block;
-	margin: 5px 0;
-}
-#examplesList ul li a{
-	color: #BDBDBD;
-	margin:0;
-}
-#examplesList ul li a:hover{
-	color: #f2f2f2;
-}
-#examplesList .column{
-	float: left;
-	margin: 0 20px 0 0;
-}
-#examplesList h3{
-	color: #f2f2f2;
-	font-size: 1.2em;
-	margin: 0 0 15px 0;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.1);
-	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	padding: 0 0 5px 0;
-}
-
 
 
 /* Demos Menu
@@ -299,3 +251,47 @@ h1{
 
 /* Sections backgrounds
 * --------------------------------------- */
+.my-arrow {
+	font-size: 0.8em;
+	top: 55%;
+
+	color: #276e8f;
+	opacity:0.4
+}
+
+#fp-nav {
+	top: 20%;
+}
+
+.section {
+	text-align: center;
+	font-size: 3em;
+}
+
+/* Bavigation bar */
+#my-nav {
+	position: fixed;
+	z-index: 9999;
+	right: 3%;
+	top: 20px;
+}
+
+#my-nav li {
+	width: 20px;
+	height: 7px;
+	display: block;
+	margin: 30px 0 20px 0;
+	cursor: pointer;
+}
+
+#my-nav li img {
+	width: 2vw;
+	position: relative;
+
+
+}
+
+#my-nav li.active {
+	color: blue;
+	height: 2px;
+}
